--- a/translations/game.fr.xlf
+++ b/translations/game.fr.xlf
@@ -7903,7 +7903,7 @@
     </unit>
     <unit id="_xMXxrI">
       <notes>
-        <note category="german">Auch du musst diese Stadt heute Nacht verteidigen! Tritt in die Wächtergruppe ein! Du möchtest Mitglied der selbstmörd... tapfersten Bürger werden? Was zögerst du noch:</note>
+        <note category="german">Auch du musst diese Stadt heute Nacht verteidigen! Tritt in die &lt;strong&gt;Wächtergruppe&lt;/strong&gt; ein!&lt;br /&gt;&lt;br /&gt;Du möchtest Mitglied der selbstmörd... &lt;strong&gt;tapfersten Bürger&lt;/strong&gt; werden? Was zögerst du noch:</note>
       </notes>
       <segment>
         <source>Auch du musst diese Stadt heute Nacht verteidigen! Tritt in die Wächtergruppe ein! Du möchtest Mitglied der selbstmörd... tapfersten Bürger werden? Was zögerst du noch:</source>
@@ -15120,7 +15120,7 @@
     </unit>
     <unit id="qX1gDpX" name="Die Stadt ist zerstört! Flieht, irh Narren!">
       <notes>
-        <note category="german">Die Stadt ist zerstört! Flieht, irh Narren!</note>
+        <note category="german">Die Stadt ist zerstört! Flieht, ihr Narren!</note>
       </notes>
       <segment>
         <source>Die Stadt ist zerstört! Flieht, irh Narren!</source>
@@ -19290,6 +19290,51 @@
       <segment>
         <source>Die Bank enthält zur Zeit keine Gegenstände, die bearbeitet werden können...</source>
         <target>Die Bank enthält zur Zeit keine Gegenstände, die bearbeitet werden können...</target>
+      </segment>
+    </unit>
+    <unit id="gLXdI1z" name="Diskussionen im Werkstatt-Forum">
+      <notes>
+        <note category="german">Diskussionen im Werkstatt-Forum</note>
+      </notes>
+      <segment>
+        <source>Diskussionen im Werkstatt-Forum</source>
+        <target>Discussions du forum atelier</target>
+      </segment>
+    </unit>
+    <unit id="8Ur1ER9" name="Nachtwache">
+      <notes>
+        <note category="german">Nachtwache</note>
+      </notes>
+      <segment>
+        <source>Nachtwache</source>
+        <target>Veille</target>
+      </segment>
+    </unit>
+    <unit id="_ZqqBod">
+      <notes>
+        <note category="german">Achte darauf, keine &lt;strong&gt;nutzlosen Ressourcen&lt;/strong&gt; herzustellen! Wenn du dir nicht sicher bist, sieh in dem &lt;strong&gt;Forum&lt;/strong&gt; hier unten nach...</note>
+      </notes>
+      <segment>
+        <source>Achte darauf, keine &lt;strong&gt;nutzlosen Ressourcen&lt;/strong&gt; herzustellen! Wenn du dir nicht sicher bist, sieh in dem &lt;strong&gt;Forum&lt;/strong&gt; hier unten nach...</source>
+        <target><![CDATA[Attention à ne pas produire de ressources inutiles pour la ville ! Dans le doute, renseignez-vous sur le forum ci-dessous...]]></target>
+      </segment>
+    </unit>
+    <unit id="YWyyGKZ" name="Material">
+      <notes>
+        <note category="german">Material</note>
+      </notes>
+      <segment>
+        <source>Material</source>
+        <target>Utiliser</target>
+      </segment>
+    </unit>
+    <unit id="41lnCy0" name="Hergestellter Gegenstand">
+      <notes>
+        <note category="german">Hergestellter Gegenstand</note>
+      </notes>
+      <segment>
+        <source>Hergestellter Gegenstand</source>
+        <target>Objet obtenu</target>
       </segment>
     </unit>
   </file>
