--- a/translations/game.es.xlf
+++ b/translations/game.es.xlf
@@ -19281,7 +19281,7 @@
       </notes>
       <segment>
         <source>Achte darauf, keine &lt;strong&gt;nutzlosen Ressourcen&lt;/strong&gt; herzustellen! Wenn du dir nicht sicher bist, sieh in dem &lt;strong&gt;Forum&lt;/strong&gt; hier unten nach...</source>
-        <target><![CDATA[¡Trata de no producir recursos inútiles para el pueblo! Si tienes una duda, pregunta en el Foro.]]></target>
+        <target>¡Trata de no producir recursos inútiles para el pueblo! Si tienes una duda, pregunta en el Foro.</target>
       </segment>
     </unit>
     <unit id="YWyyGKZ" name="Material">
