--- a/translations/global.en.xlf
+++ b/translations/global.en.xlf
@@ -2723,7 +2723,7 @@
       </notes>
       <segment>
         <source>Groß</source>
-        <target>Groß</target>
+        <target>Big</target>
       </segment>
     </unit>
   </file>
