--- a/translations/global.es.xlf
+++ b/translations/global.es.xlf
@@ -2705,7 +2705,7 @@
       </notes>
       <segment>
         <source>Groß</source>
-        <target>Groß</target>
+        <target>Grande</target>
       </segment>
     </unit>
   </file>
