--- a/translations/global.fr.xlf
+++ b/translations/global.fr.xlf
@@ -2730,7 +2730,7 @@
       </notes>
       <segment>
         <source>Groß</source>
-        <target>Groß</target>
+        <target>Gros</target>
       </segment>
     </unit>
   </file>
