--- a/translations/game.fr.xlf
+++ b/translations/game.fr.xlf
@@ -19316,7 +19316,7 @@
       </notes>
       <segment>
         <source>Achte darauf, keine &lt;strong&gt;nutzlosen Ressourcen&lt;/strong&gt; herzustellen! Wenn du dir nicht sicher bist, sieh in dem &lt;strong&gt;Forum&lt;/strong&gt; hier unten nach...</source>
-        <target>Attention à ne pas produire de ressources inutiles pour la ville ! Dans le doute, renseignez-vous sur le forum ci-dessous...</target>
+        <target><![CDATA[Attention à ne pas produire de <strong>ressources inutiles</strong> pour la ville ! Dans le doute, renseignez-vous sur le <strong>forum ci-dessous</strong>...]]></target>
       </segment>
     </unit>
     <unit id="YWyyGKZ" name="Material">
