--- a/translations/game.fr.xlf
+++ b/translations/game.fr.xlf
@@ -8360,15 +8360,6 @@
         <target>Votre blessure à l'œil vous gêne énormément lors de vos fouilles.</target>
       </segment>
     </unit>
-    <unit id="yvgmhoy">
-      <notes>
-        <note category="german">Dein &lt;strong&gt;Trunkenheitszustand&lt;/strong&gt; hilft dir wirklich night weiter. Das ist night gerade einfach, wenn sich alles dreht und du nicht mehr klar siehst.</note>
-      </notes>
-      <segment>
-        <source>Dein &lt;strong&gt;Trunkenheitszustand&lt;/strong&gt; hilft dir wirklich night weiter. Das ist night gerade einfach, wenn sich alles dreht und du nicht mehr klar siehst.</source>
-        <target><![CDATA[Votre <strong>état d'ébriété</strong> n'arrange pas vraiment les choses. Pas facile de faire cela quand on n'y voit plus très clair...]]></target>
-      </segment>
-    </unit>
     <unit id="UhCUwjo" name="Du kannst heute keine weiteren Beschwerden vorbringen.">
       <notes>
         <note category="german">Du kannst heute keine weiteren Beschwerden vorbringen.</note>
@@ -18347,15 +18338,6 @@
         <target>%citizen% a failli se faire dévorer en attaquant un zombie à mains nues...</target>
       </segment>
     </unit>
-    <unit id="20wAGQf">
-      <notes>
-        <note category="german">Your &lt;strong&gt;sobriety&lt;/strong&gt;, or lack thereof, is quite inconvenient. Things become pretty tricky pretty quickly when you're completely wasted...</note>
-      </notes>
-      <segment>
-        <source>Dein &lt;strong&gt;Trunkenheitszustand&lt;/strong&gt; hilft dir wirklich night weiter. Das ist night gerade einfach, wenn sich alles dreht und du nicht mehr klar siehst</source>
-        <target><![CDATA[Dein <strong>Trunkenheitszustand</strong> hilft dir wirklich night weiter. Das ist night gerade einfach, wenn sich alles dreht und du nicht mehr klar siehst]]></target>
-      </segment>
-    </unit>
     <unit id="KP2BLp3" name="Du kannst in den Foren um Hilfe bitten!">
       <notes>
         <note category="german">Du kannst in den Foren um Hilfe bitten!</note>
@@ -18509,13 +18491,13 @@
         <target>Quelqu'un a pris %item% dans les coffres de la Banque mais il (ou elle) n'a pu être identifié(e).</target>
       </segment>
     </unit>
-    <unit id="pygRaEs">
+    <unit id="3YClH4I">
       <notes>
-        <note category="german">Dein &lt;strong&gt;Trunkenheitszustand&lt;/strong&gt; hilft dir wirklich nicht weiter. Das ist nicht gerade einfach, wenn sich alles dreht und du nicht mehr klar siehst</note>
+        <note category="german">Dein &lt;strong&gt;Trunkenheitszustand&lt;/strong&gt; hilft dir wirklich nicht weiter. Das ist nicht gerade einfach, wenn sich alles dreht und du nicht mehr klar siehst.</note>
       </notes>
       <segment>
-        <source>Dein &lt;strong&gt;Trunkenheitszustand&lt;/strong&gt; hilft dir wirklich nicht weiter. Das ist nicht gerade einfach, wenn sich alles dreht und du nicht mehr klar siehst</source>
-        <target><![CDATA[Dein <strong>Trunkenheitszustand</strong> hilft dir wirklich nicht weiter. Das ist nicht gerade einfach, wenn sich alles dreht und du nicht mehr klar siehst]]></target>
+        <source>Dein &lt;strong&gt;Trunkenheitszustand&lt;/strong&gt; hilft dir wirklich nicht weiter. Das ist nicht gerade einfach, wenn sich alles dreht und du nicht mehr klar siehst.</source>
+        <target><![CDATA[Votre <strong>état d'ébriété</strong> n'arrange pas vraiment les choses. Pas facile de faire cela quand on n'y voit plus très clair...]]></target>
       </segment>
     </unit>
     <unit id="56UUc2e">
