--- a/translations/game.es.xlf
+++ b/translations/game.es.xlf
@@ -1456,15 +1456,6 @@
         <target>Votos:</target>
       </segment>
     </unit>
-    <unit id="qOmfTuV">
-      <notes>
-        <note category="german">In der Werkstatt können Materialien zu brauchbaren Hilfsmitteln verarbeitet werden, die für bestimmte Gebäude und Konstruktionen in der Stadt notwendig sind. Alle zu bearbeitenden Gegenstände müssen direkt in der Bank deponiert werden.</note>
-      </notes>
-      <segment>
-        <source>In der Werkstatt können Materialien zu brauchbaren Hilfsmitteln verarbeitet werden, die für bestimmte Gebäude und Konstruktionen in der Stadt notwendig sind. Alle zu bearbeitenden Gegenstände müssen direkt in der Bank deponiert werden.</source>
-        <target>En el taller transformarás los materiales de construcción avanzados que algunas construcciones necesitan. Los materiales transformados se colocan directamente en el Almacén del pueblo. Cada transformación cuesta desde 3PA (ciertos objetos pueden reducir este costo).</target>
-      </segment>
-    </unit>
     <unit id="pOcBXgj" name="Du wurdest verbannt und kannst daher nicht länger in der Werkstatt arbeiten.">
       <notes>
         <note category="german">Du wurdest verbannt und kannst daher nicht länger in der Werkstatt arbeiten.</note>
@@ -18444,7 +18435,7 @@
       </notes>
       <segment>
         <source>Dein &lt;strong&gt;Trunkenheitszustand&lt;/strong&gt; hilft dir wirklich nicht weiter. Das ist nicht gerade einfach, wenn sich alles dreht und du nicht mehr klar siehst.</source>
-        <target>Tu borrachera no te facilita las cosas...</target>
+        <target><![CDATA[Tu <strong>estado de ebriedad</strong> realmente no mejora las cosas. No es fácil hacerlo cuando no se ve todo claro...]]></target>
       </segment>
     </unit>
     <unit id="56UUc2e">
@@ -19282,6 +19273,24 @@
       <segment>
         <source>Hergestellter Gegenstand</source>
         <target>Objeto obtenido</target>
+      </segment>
+    </unit>
+    <unit id="tA.qFY5">
+      <notes>
+        <note category="german">In der Werkstatt können Materialien zu brauchbaren Hilfsmitteln verarbeitet werden, die für bestimmte Gebäude und Konstruktionen in der Stadt notwendig sind.</note>
+      </notes>
+      <segment>
+        <source>In der Werkstatt können Materialien zu brauchbaren Hilfsmitteln verarbeitet werden, die für bestimmte Gebäude und Konstruktionen in der Stadt notwendig sind.</source>
+        <target>En el taller transformarás los materiales de construcción avanzados que algunas construcciones necesitan.</target>
+      </segment>
+    </unit>
+    <unit id="DxR2pQ8" name="Alle zu bearbeitenden Gegenstände müssen direkt in der Bank deponiert werden.">
+      <notes>
+        <note category="german">Alle zu bearbeitenden Gegenstände müssen direkt in der Bank deponiert werden.</note>
+      </notes>
+      <segment>
+        <source>Alle zu bearbeitenden Gegenstände müssen direkt in der Bank deponiert werden.</source>
+        <target>Los materiales transformados se colocan directamente en el Almacén del pueblo.</target>
       </segment>
     </unit>
   </file>
