--- a/translations/game.fr.xlf
+++ b/translations/game.fr.xlf
@@ -1454,15 +1454,6 @@
         <target>Vote(s) :</target>
       </segment>
     </unit>
-    <unit id="qOmfTuV">
-      <notes>
-        <note category="german">In der Werkstatt können Materialien zu brauchbaren Hilfsmitteln verarbeitet werden, die für bestimmte Gebäude und Konstruktionen in der Stadt notwendig sind. Alle zu bearbeitenden Gegenstände müssen direkt in der Bank deponiert werden.</note>
-      </notes>
-      <segment>
-        <source>In der Werkstatt können Materialien zu brauchbaren Hilfsmitteln verarbeitet werden, die für bestimmte Gebäude und Konstruktionen in der Stadt notwendig sind. Alle zu bearbeitenden Gegenstände müssen direkt in der Bank deponiert werden.</source>
-        <target>L'atelier permet la fabrication de matériaux de constructions avancés, nécessaires pour certains chantiers en ville. Les objets à transformer sont à placer directement dans la Banque de la ville. Chaque transformation coûte 3PA de base (certains objets peuvent réduire ce coût).</target>
-      </segment>
-    </unit>
     <unit id="pOcBXgj" name="Du wurdest verbannt und kannst daher nicht länger in der Werkstatt arbeiten.">
       <notes>
         <note category="german">Du wurdest verbannt und kannst daher nicht länger in der Werkstatt arbeiten.</note>
@@ -19317,6 +19308,24 @@
       <segment>
         <source>Hergestellter Gegenstand</source>
         <target>Objet obtenu</target>
+      </segment>
+    </unit>
+    <unit id="tA.qFY5">
+      <notes>
+        <note category="german">In der Werkstatt können Materialien zu brauchbaren Hilfsmitteln verarbeitet werden, die für bestimmte Gebäude und Konstruktionen in der Stadt notwendig sind.</note>
+      </notes>
+      <segment>
+        <source>In der Werkstatt können Materialien zu brauchbaren Hilfsmitteln verarbeitet werden, die für bestimmte Gebäude und Konstruktionen in der Stadt notwendig sind.</source>
+        <target>L'atelier permet la fabrication de matériaux de constructions avancés, nécessaires pour certains chantiers en ville.</target>
+      </segment>
+    </unit>
+    <unit id="DxR2pQ8" name="Alle zu bearbeitenden Gegenstände müssen direkt in der Bank deponiert werden.">
+      <notes>
+        <note category="german">Alle zu bearbeitenden Gegenstände müssen direkt in der Bank deponiert werden.</note>
+      </notes>
+      <segment>
+        <source>Alle zu bearbeitenden Gegenstände müssen direkt in der Bank deponiert werden.</source>
+        <target>Les objets à transformer sont à placer directement dans la Banque de la ville.</target>
       </segment>
     </unit>
   </file>
